# airdot-Deploy

./: README.md  pyproject.toml  setup.py
airdot/: __init__.py  deployer.py
airdot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
airdot/collection/: collections.py
airdot/helpers/: docker_helper.py  general_helpers.py  minio_helper.py  network_helper.py  redis_helper.py  runtime_helper.py
data/.minio.sys/: format.json
