# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airdot"
version = "0.5.0b0"
description = "A code base for deploying ml api "
readme = "README.md"
authors = [{ name = "Abhinav Singh", email = "abhinav035991@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "pytest == 7.2",
    "typer == 0.6",
    "PyYAML == 5.4",
    "google-api-python-client == 2.72.0",
    "google-cloud-core == 2.3.2",
    "google-cloud-storage == 2.7.0",
    "zstd == 1.5.2.6",
    "pandas == 1.5.2"
]

requires-python = ">=3.6"

[project.optional-dependencies]
dev = ["black", "typer", "pytest", "PyYAML"]

[project.urls]
Homepage = "https://github.com/ChalamPVS/ml-deployer/tree/devel"